[package]
name = "kvdb"
version = "0.1.0"
edition = "2021"
authors = ["hedon954 <171725713@qq.com>"]
description = "A simple key-value database in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bytes = "1.9.0"
prost = "0.13.4"
tracing = "0.1.41"

[dev-dependencies]
anyhow = "1.0.94"
async-trait = "0.1.83"
futures = "0.3.31"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "io-util", "macros", "net"] }
tracing-subscriber = "0.3.19"

[build-dependencies]
prost-build = "0.13.4"
