[package]
name = "kvdb"
version = "0.1.0"
edition = "2021"
authors = ["hedon954 <171725713@qq.com>"]
description = "A simple key-value database in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bytes = "1"
dashmap = "6.1.0"
http = "1.2.0"
prost = "0.9"
sled = "0.34.7"
thiserror = "2.0.6"
tracing = "0.1"

[dev-dependencies]
anyhow = "1"
async-prost = "0.3"
futures = "0.3"
tempfile = "3.14.0"
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "io-util",
    "macros",
    "net",
] }
tracing-subscriber = "0.3"


[build-dependencies]
prost-build = "0.9"
