[package]
name = "kvdb"
version = "0.1.0"
edition = "2021"
authors = ["hedon <171725713@qq.com>"]
description = "A simple key-value database in Rust"

[[bin]]
name = "kvs"
path = "src/server.rs"

[[bin]]
name = "kvc"
path = "src/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1"
bytes = "1"
dashmap = "6.1.0"
flate2 = "1.0.35"
http = "1.2.0"
prost = "0.9"
sled = "0.34.7"
thiserror = "2.0.6"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
async-prost = "0.3"
futures = "0.3"
tempfile = "3.14.0"

[build-dependencies]
prost-build = "0.9"
